CCD-7714 Remove shaded App Insights imports and verify telemetry